--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
     sdk: flutter
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^10.2.0
+  image_picker: ^0.8.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
