--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^10.2.0
   image_picker: ^0.8.4
+  url_launcher: ^6.0.10
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
