--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dev_dependencies:
   font_awesome_flutter: ^10.2.0
   image_picker: ^0.8.4
   url_launcher: ^6.0.10
+  photo_view: ^0.14.0
+  mask_text_input_formatter: ^2.7.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
