--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
   url_launcher: ^6.0.10
   photo_view: ^0.14.0
   mask_text_input_formatter: ^2.7.0
+  firebase_core: ^2.5.2
+  firebase_auth: ^4.6.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
