--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +49,7 @@ dev_dependencies:
   url_launcher: ^6.0.10
   photo_view: ^0.14.0
   mask_text_input_formatter: ^2.7.0
-  firebase_core: ^2.5.2
-  firebase_auth: ^4.6.0
+  intl: ^0.17.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
