--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   photo_view: ^0.14.0
   mask_text_input_formatter: ^2.7.0
   intl: ^0.17.0
+  provider: ^6.0.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
