--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   intl: ^0.17.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
+  brasil_fields: ^1.9.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
