--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dev_dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.2
   brasil_fields: ^1.9.1
+  file_picker: ^4.6.1
+  path_provider: ^2.0.15
+  dio: ^4.0.0
+  fluttertoast: ^8.2.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
