--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dev_dependencies:
   path_provider: ^2.0.15
   dio: ^4.0.0
   fluttertoast: ^8.2.4
+  connectivity_plus: ^5.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
