--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.escola.RunnerTests</string>
+	<string>com.escola.RunnerTests</string>
 	<key>PROJECT_ID</key>
 	<string>projeto-escola-22b2f</string>
 	<key>STORAGE_BUCKET</key>
