--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   fluttertoast: ^8.2.4
   connectivity_plus: ^5.0.0
   google_fonts: ^6.1.0
+  excel: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
